--- a/data/com.github.Timecraft.notifier.desktop
+++ b/data/com.github.Timecraft.notifier.desktop
@@ -3,7 +3,7 @@ Name=Notifier
 GenericName=Reminders Application
 Comment=Remind yourself
 Categories=Utility; Accessories;
-Exec=com.github.Timecraft.notify
+Exec=com.github.Timecraft.notifier
 Icon=application-default-icon
 Terminal=false
 Type=Application
