--- a/data/com.github.Timecraft.notifier.desktop
+++ b/data/com.github.Timecraft.notifier.desktop
@@ -4,7 +4,7 @@ GenericName=Reminders Application
 Comment=Remind yourself
 Categories=Utility; Accessories;
 Exec=com.github.Timecraft.notifier
-Icon=application-default-icon
+Icon=com.github.Timecraft.Notifier.svg
 Terminal=false
 Type=Application
 X-GNOME-Gettext-domain=notifier
