--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Build-Depends: cmake (>= 2.8),
                valac (>= 0.16)
 Standards-Version: 3.9.3
 
-Package: com.github.Timecraft.notify
+Package: com.github.Timecraft.notifier
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: A reminders app
