--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: com.github.timecraft.notifier
+Source: com.github.Timecraft.Notifier
 Section: x11
 Priority: extra
 Maintainer: Timecraft <timemaster23x@gmail.com>
@@ -9,7 +9,7 @@ Build-Depends: cmake (>= 2.8),
                valac (>= 0.16)
 Standards-Version: 3.9.3
 
-Package: com.github.Timecraft.notifier
+Package: com.github.Timecraft.Notifier
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: A reminders app
