--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,8 @@ Build-Depends: cmake (>= 2.8),
                cmake-elementary,
                debhelper (>= 9),
                libgtk-3-dev,
-               valac (>= 0.16)
+               valac (>= 0.16),
+               sqlite3
 Standards-Version: 3.9.3
 
 Package: com.github.timecraft.notifier
