Removed Accessories from categories

--- a/data/com.github.timecraft.notifier.desktop
+++ b/data/com.github.timecraft.notifier.desktop
@@ -3,7 +3,7 @@ Type=Application
 Name=Notifier
 GenericName=Reminders
 Comment=Remind yourself
-Categories=GNOME;GTK;Utility; Accessories;
+Categories=GNOME;GTK;Utility;
 Exec=com.github.timecraft.notifier
 Icon=com.github.Timecraft.Notifier
 Terminal=false
