--- a/.travis.yml
+++ b/.travis.yml
@@ -3,23 +3,23 @@
 language: node_js
 
 node_js:
-  -lts/*
+  - lts/*
 
 sudo: required
 
 services:
-  -docker
+  - docker
 
 addons:
   apt:
     sources:
-      -ubuntu-toolchain-r-test
-      packages:
-        -libstdc++-5-dev
+      - ubuntu-toolchain-r-test
+    packages:
+      - libstdc++-5-dev
 
-      cache:
-        directories:
-          - /tmp/liftoff
+cache:
+  directories:
+    - /tmp/liftoff
 
 matrix:
   include:
@@ -30,5 +30,5 @@ install:
   - npm install @elementaryos/houston
 
 script:
-  -houston ci
+  - houston ci
     --distribution $DIST
