--- a/data/com.github.timecraft.notifier-daemon.desktop
+++ b/data/com.github.timecraft.notifier-daemon.desktop
@@ -2,7 +2,7 @@
 Type=Application
 Name=com.github.timecraft.notifier-daemon
 Comment=A daemon to handle sending Notifier notifications
-Exec=com.github.Timecraft.notifier-daemon
+Exec=com.github.timecraft.notifier-daemon
 Icon=com.github.timecraft.notifier
 X-GNOME-UsesNotifications=true
 X-GNOME-Autostart-enabled=true
