Made the t's capital to see if Houston CI likes that better

--- a/data/com.github.timecraft.notifier-daemon.desktop
+++ b/data/com.github.timecraft.notifier-daemon.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Application
-Name=com.github.timecraft.notifier-daemon
+Name=com.github.Timecraft.notifier-daemon
 Comment=A daemon to handle sending Notifier notifications
 Exec=com.github.timecraft.notifier-daemon
 Icon=com.github.timecraft.notifier
