Still trying to fix. Now I'm modifiying btkostner's solution

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,5 +33,7 @@ install:
 
 script:
   - houston ci
-    --name-appstream com.github.timecraft.notifier
+    --name-appstream com.github.timecraft.notifier.desktop
+    --name-domain com.github.timecraft.notifier
+    --name-human Notifier
     --distribution $DIST
