Added a semicolon to the end of Categories

--- a/data/com.github.timecraft.notifier.desktop
+++ b/data/com.github.timecraft.notifier.desktop
@@ -3,7 +3,7 @@ Type=Application
 Name=Notifier
 GenericName=Reminders
 Comment=Remind yourself
-Categories=GNOME;GTK;Office;ProjectManagement;Utility
+Categories=GNOME;GTK;Office;ProjectManagement;Utility;
 Exec=com.github.timecraft.notifier
 Icon=com.github.timecraft.notifier
 Terminal=false
