--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: cmake (>= 2.8),
                libgtk-3-dev,
                valac (>= 0.16),
                libsqlite3-dev,
-               granite (>=0.5)
+               libgranite-dev (>=0.5)
 Standards-Version: 3.9.3
 
 Package: com.github.timecraft.notifier
