--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,7 @@ Source: com.github.timecraft.notifier
 Section: x11
 Priority: extra
 Maintainer: Timecraft <timemaster23x@gmail.com>
-Build-Depends: cmake (>= 2.8),
-               cmake-elementary,
+Build-Depends: meson,
                debhelper (>= 9),
                libgtk-3-dev,
                valac (>= 0.16),
