--- a/debian/control
+++ b/debian/control
@@ -5,9 +5,9 @@ Maintainer: Timecraft <timemaster23x@gmail.com>
 Build-Depends: meson,
                debhelper (>= 9),
                libgtk-3-dev,
-               valac (>= 0.16),
+               valac (>= 0.26),
                libsqlite3-dev,
-               libgranite-dev (>=0.5)
+               libgranite-dev
 Standards-Version: 3.9.3
 
 Package: com.github.timecraft.notifier
