--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,8 @@ Build-Depends: meson,
                libgtk-3-dev,
                valac (>= 0.26),
                libsqlite3-dev,
-               libgranite-dev
+               libgranite-dev,
+               libglib2.0-dev
 Standards-Version: 3.9.3
 
 Package: com.github.timecraft.notifier
