--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,7 @@ Build-Depends: libsqlite3-dev,
                debhelper (>= 9),
                libgranite-dev,
                libgtk-3-dev,
-               cmake,
-               cmake-elementary,
+               meson,
                valac
 Standards-Version: 3.9.3
 
