--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,12 @@ Source: com.github.timecraft.notifier
 Section: x11
 Priority: extra
 Maintainer: Timecraft <timemaster23x@gmail.com>
-Build-Depends: libsqlite3-dev,
+Build-Depends: cmake (>= 2.8),
+               cmake-elementary,
                debhelper (>= 9),
-               libgranite-dev,
                libgtk-3-dev,
-               meson,
-               valac
+               valac (>= 0.16),
+               libsqlite3-dev
 Standards-Version: 3.9.3
 
 Package: com.github.timecraft.notifier
