--- a/debian/rules
+++ b/debian/rules
@@ -7,23 +7,8 @@
 # This special exception was added by Craig Small in version 0.37 of dh-make.
 
 # Uncomment this to turn on verbose mode.
-export DH_VERBOSE=1
+#export DH_VERBOSE=1
 
 %:
-	dh $@
+	dh $@ 
 
-override_dh_auto_clean:
-	rm -rf debian/build
-
-override_dh_auto_configure:
-	mkdir -p debian/build
-	cd debian/build && meson --prefix=/usr ../..
-
-override_dh_auto_build:
-	cd debian/build && ninja -v
-
-override_dh_auto_test:
-	cd debian/build && ninja test
-
-override_dh_auto_install:
-cd debian/build && DESTDIR=${CURDIR}/debian/com.github.timecraft.notifier ninja install
