--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,8 @@ Build-Depends: cmake (>= 2.8),
                debhelper (>= 9),
                libgtk-3-dev,
                valac (>= 0.16),
-               libsqlite3-dev
+               libsqlite3-dev,
+               libgranite-dev
 Standards-Version: 3.9.3
 
 Package: com.github.timecraft.notifier
