--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: com.github.timecraft.notifier
 Section: x11
 Priority: extra
 Maintainer: Timecraft <timemaster23x@gmail.com>
-Build-Depends: meson,
+Build-Depends: cmake,
+               cmake-elementary,
                debhelper (>= 9),
                libgtk-3-dev,
                valac (>= 0.16),
