Trying to get Houston CI to pass Notifier

--- a/debian/control
+++ b/debian/control
@@ -3,11 +3,10 @@ Section: x11
 Priority: extra
 Maintainer: Timecraft <timemaster23x@gmail.com>
 Build-Depends: meson,
-               ninja,
-               debhelper (>= 9),
+               debhelper (>= 10.5.1),
                libgtk-3-dev,
-               valac (>= 0.16),
-               libsqlite3-dev,
+               valac (>= 0.26),
+               libsqlite3-dev (>= 0.5),
                libgranite-dev
 Standards-Version: 3.9.3
 
