Hear me, Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,6 @@ cache:
 
 matrix:
   include:
-    - env: DIST=loki
     - env: DIST=juno
 
 install:
@@ -32,3 +31,7 @@ install:
 script:
   - houston ci
 --distribution $DIST
+
+branches:
+  only:
+     - master
