--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,15 @@ matrix:
   include:
     - env: DIST=juno
 
+before_install:
+- docker pull ubuntu:18.04
+
 install:
-  - npm install @elementaryos/houston
+  - npm install @elementaryos/houston@1
 
 script:
   - houston ci
+    --name-human Notifier
     --distribution $DIST
 
 branches:
