--- a/data/com.github.timecraft.notifier.appdata.xml.in
+++ b/data/com.github.timecraft.notifier.appdata.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--Copyright 2018 Timecraft <timemaster23x@gmail.com> -->
 <component type="desktop">
-  <id>com.github.timecraft.notifier.desktop</id>
+  <id>com.github.timecraft.notifier</id>
 
   <metadata_license>CC0</metadata_license>
   <project_license>GPL-3.0+</project_license>
